Opening stock form

--- a/StockManager/Views/Products/Index.cshtml
+++ b/StockManager/Views/Products/Index.cshtml
@@ -14,6 +14,9 @@
             <a href="@Url.Action("Create")" class="btn btn-circle btn-default">
                 <i class="fa fa-plus"></i> New
             </a>
+            <a href="@Url.Action("UpdateOpeningStock")" class="btn btn-circle btn-default">
+                <i class="fa fa-plus"></i> Update Opening Stock
+            </a>
             <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title="">
             </a>
         </div>
