--- a/StockManager/Views/TailorChalan/Edit.cshtml
+++ b/StockManager/Views/TailorChalan/Edit.cshtml
@@ -314,9 +314,9 @@
                                 var matarialDetail = "";
                                 if('@Model.IsGivenToTailor' == 'False')
                                 {
-                                    //$('#tailorMaterialDetails tbody tr').each(function (index, ele) {
-                                    //    matarialDetail +=  (matarialDetail == "" ? "{\"ProductId\":\"" : ",{\"ProductId\":\"") +  $('.materialId', this).val() + "\",\"Quantity\":\"" +  $('.materialQuantity', this).val() + "\"}";
-                                    //});
+                                    $('#tailorMaterialDetails tbody tr').each(function (index, ele) {
+                                        matarialDetail +=  (matarialDetail == "" ? "{\"ProductId\":\"" : ",{\"ProductId\":\"") +  $('.materialId', this).val() + "\",\"Quantity\":\"" +  $('.materialQuantity', this).val() + "\"}";
+                                    });
                                 }
 
                                 $('.productId', this).val($('#product').val());
