--- a/StockManager/Views/Products/UpdateOpeningStock.cshtml
+++ b/StockManager/Views/Products/UpdateOpeningStock.cshtml
@@ -27,8 +27,7 @@
             var i = 0;
 
             @Html.AntiForgeryToken()
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
+            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
             @Html.HiddenFor(x => x.FinancialYear.Id)
 
             <table class="table table-bordered table-hover">
