--- a/StockManager/Views/Products/Create.cshtml
+++ b/StockManager/Views/Products/Create.cshtml
@@ -65,7 +65,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.IsActive, "Active", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        <div class="mt-checkbox">
+                        <div class="checkbox">
                             @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "align-middle" } })
                             @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
                         </div>
