--- a/StockManager/Views/Products/Details.cshtml
+++ b/StockManager/Views/Products/Details.cshtml
@@ -45,6 +45,20 @@
                 @Html.DisplayFor(model => model.ProductType.ProductType1)
             </dd>
             <dt>
+                Selling Price
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.SellingPrice)
+            </dd>
+            <dt>
+                Unit of Measurement
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.MeasuringUnit)
+            </dd>
+            <dt>
                 Active
             </dt>
             <dd>
