--- a/StockManager/Views/Shared/dashboard/sidebar.cshtml
+++ b/StockManager/Views/Shared/dashboard/sidebar.cshtml
@@ -78,31 +78,45 @@
                     </span>
                 </a>
             </li>
-            <li class="nav-item start @Html.IsSelected(controller: "Users")">
-                <a href="@Url.Action("Index", "Users")" class="nav-link nav-toggle">
-                    <i class="fa fa-users fa-fw"></i>
-                    <span class="title">Users</span>
-                </a>
-            </li>
-            <li class="nav-item start @Html.IsSelected(controller: "Reports")">
+            <li class="nav-item start ">
                 <a href="javascript:;" class="nav-link nav-toggle">
-                    <i class="fa fa-line-chart fa-fw"></i>
-                    <span class="title">Reports</span>
+                    <i class="fa fa-cog fa-fw"></i>
+                    <span class="title">Administration</span>
                 </a>
                 <ul class="sub-menu">
-                    <li class="nav-item  ">
-                        <a href="#" class="nav-link ">
-                            <span class="title">Example 1</span>
+                    <li class="nav-item start @Html.IsSelected(controller: "Company")">
+                        <a href="@Url.Action("Index", "Company")" class="nav-link nav-toggle">
+                            <i class="fa fa-cog fa-fw"></i>
+                            <span class="title">Companies</span>
                         </a>
                     </li>
-                    <li class="nav-item  ">
-                        <a href="#" class="nav-link ">
-                            <span class="title">Example 2</span>
+                    <li class="nav-item start @Html.IsSelected(controller: "Users")">
+                        <a href="@Url.Action("Index", "Users")" class="nav-link nav-toggle">
+                            <i class="fa fa-users fa-fw"></i>
+                            <span class="title">Users</span>
                         </a>
                     </li>
                 </ul>
             </li>
-        </ul>
+<li class="nav-item start @Html.IsSelected(controller: "Reports")">
+                    <a href="javascript:;" class="nav-link nav-toggle">
+                        <i class="fa fa-line-chart fa-fw"></i>
+                        <span class="title">Reports</span>
+                    </a>
+                    <ul class="sub-menu">
+                        <li class="nav-item  ">
+                            <a href="#" class="nav-link ">
+                                <span class="title">Example 1</span>
+                            </a>
+                        </li>
+                        <li class="nav-item  ">
+                            <a href="#" class="nav-link ">
+                                <span class="title">Example 2</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         <!-- END SIDEBAR MENU -->
     </div>
     <!-- END SIDEBAR -->
