--- a/StockManager/Views/Users/Details.cshtml
+++ b/StockManager/Views/Users/Details.cshtml
@@ -61,6 +61,13 @@
             <dd>
                 @Html.DisplayFor(model => model.Tenant.Name)
             </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.UserRole.RoleName)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.UserRole.RoleName)
+            </dd>
 
         </dl>
     </div>
