--- a/StockManager/Views/Shared/dashboard/topnav.cshtml
+++ b/StockManager/Views/Shared/dashboard/topnav.cshtml
@@ -30,7 +30,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-default">
                             <li>
-                                <a href="#">
+                                <a href="@Url.Action("profile","Users")">
                                     <i class="icon-user"></i> My Profile
                                 </a>
                             </li>
