--- a/StockManager/Views/Shared/dashboard/sidebar.cshtml
+++ b/StockManager/Views/Shared/dashboard/sidebar.cshtml
@@ -44,12 +44,12 @@
                         <a href="@Url.Action("Index", "PrinterChalans")" class="nav-link ">
                             <span class="title">Printer Chalans</span>
                         </a>
-                    </li>   
+                    </li>
                     <li class="nav-item  ">
                         <a href="@Url.Action("Index", "PrintJobWorkReceived")" class="nav-link ">
                             <span class="title">Print Job Work Received</span>
                         </a>
-                    </li>                    
+                    </li>
                 </ul>
             </li>
             <li class="nav-item start @Html.IsSelected(controller: "TailorChalan")">
@@ -58,52 +58,6 @@
                     <span class="title">Tailor Challan</span>
                 </a>
                 @*<ul class="sub-menu">
-                    <li class="nav-item  ">
-                        <a href="#" class="nav-link ">
-                            <span class="title">Example 1</span>
-                        </a>
-                    </li>
-                    <li class="nav-item  ">
-                        <a href="#" class="nav-link ">
-                            <span class="title">Example 2</span>
-                        </a>
-                    </li>
-                </ul>*@
-            </li>
-            <li class="nav-item start @Html.IsSelected(controller: "Invoices")">
-                <a href="@Url.Action("Index", "Invoices")" class="nav-link nav-toggle">
-                    <i class="fa fa-list fa-fw"></i>
-                    <span class="title">
-                        Sales Invoice
-                    </span>
-                </a>
-            </li>
-            <li class="nav-item start ">
-                <a href="javascript:;" class="nav-link nav-toggle">
-                    <i class="fa fa-cog fa-fw"></i>
-                    <span class="title">Administration</span>
-                </a>
-                <ul class="sub-menu">
-                    <li class="nav-item start @Html.IsSelected(controller: "Company")">
-                        <a href="@Url.Action("Index", "Company")" class="nav-link nav-toggle">
-                            <i class="fa fa-cog fa-fw"></i>
-                            <span class="title">Companies</span>
-                        </a>
-                    </li>
-                    <li class="nav-item start @Html.IsSelected(controller: "Users")">
-                        <a href="@Url.Action("Index", "Users")" class="nav-link nav-toggle">
-                            <i class="fa fa-users fa-fw"></i>
-                            <span class="title">Users</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-<li class="nav-item start @Html.IsSelected(controller: "Reports")">
-                    <a href="javascript:;" class="nav-link nav-toggle">
-                        <i class="fa fa-line-chart fa-fw"></i>
-                        <span class="title">Reports</span>
-                    </a>
-                    <ul class="sub-menu">
                         <li class="nav-item  ">
                             <a href="#" class="nav-link ">
                                 <span class="title">Example 1</span>
@@ -114,9 +68,61 @@
                                 <span class="title">Example 2</span>
                             </a>
                         </li>
-                    </ul>
-                </li>
-            </ul>
+                    </ul>*@
+            </li>
+            <li class="nav-item start @Html.IsSelected(controller: "Invoices")">
+                <a href="@Url.Action("Index", "Invoices")" class="nav-link nav-toggle">
+                    <i class="fa fa-list fa-fw"></i>
+                    <span class="title">
+                        Sales Invoice
+                    </span>
+                </a>
+            </li>
+            @{
+                if (Session["RoleName"] != null && Session["RoleName"].ToString().Equals("Administrator"))
+                {
+                    <li class="nav-item start ">
+                        <a href="javascript:;" class="nav-link nav-toggle">
+                            <i class="fa fa-cog fa-fw"></i>
+                            <span class="title">Administration</span>
+                        </a>
+                        <ul class="sub-menu">
+                            <li class="nav-item start @Html.IsSelected(controller: "Company")">
+                                <a href="@Url.Action("Index", "Company")" class="nav-link nav-toggle">
+                                    <i class="fa fa-cog fa-fw"></i>
+                                    <span class="title">Companies</span>
+                                </a>
+                            </li>
+                            <li class="nav-item start @Html.IsSelected(controller: "Users")">
+                                <a href="@Url.Action("Index", "Users")" class="nav-link nav-toggle">
+                                    <i class="fa fa-users fa-fw"></i>
+                                    <span class="title">Users</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                }
+            }
+            
+            <li class="nav-item start @Html.IsSelected(controller: "Reports")">
+                <a href="javascript:;" class="nav-link nav-toggle">
+                    <i class="fa fa-line-chart fa-fw"></i>
+                    <span class="title">Reports</span>
+                </a>
+                <ul class="sub-menu">
+                    <li class="nav-item  ">
+                        <a href="#" class="nav-link ">
+                            <span class="title">Example 1</span>
+                        </a>
+                    </li>
+                    <li class="nav-item  ">
+                        <a href="#" class="nav-link ">
+                            <span class="title">Example 2</span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
         <!-- END SIDEBAR MENU -->
     </div>
     <!-- END SIDEBAR -->
